namespace Core.Handlers;

public enum Severity
{
    LOW,
    MEDIUM,
    HIGH,
    CRITICAL,
    INFO
}
